--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -882,7 +882,7 @@
     bottom: 0;
     left: 0;
     /*width: 100%;*/
-    height: 120%;
+    /*height: 120%;*/
     background: rgba(255, 255, 255, 0.96);
     backdrop-filter: blur(15px);
     border-top-left-radius: 1.5rem;
