--- a/src/components/About.css
+++ b/src/components/About.css
@@ -42,13 +42,10 @@
     /* max-w-4xl */
     margin-left: auto;
     margin-right: auto;
-    padding-left: 1rem;
-    padding-right: 1rem;
     margin-bottom: 2rem;
     /* mb-8 */
-    padding-top: 2rem;
     /* py-8 */
-    padding-bottom: 2rem;
+    padding: 2rem 1rem;
 }
 
 @media (min-width: 768px) {
